--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,5 @@ requires-python = ">=3.8"
 authors = [{name = "Tomasz Tarczyński"}]
 license = {text = "MIT"}
 
-[tool.setuptools.package.find]
+[tool.setuptools.packages.find]
 where = ["."]
